--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
-phone: '1800 123 000'
+email: 'info@appetizers.io'
+phone: '+49 175 7299889'
 contact_button_link: 'contact'
